refactor(fuzzyquery):修改开始计划接口